# satria-ai

./: .env.dev  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  github-setup.sh  phase3_test_report.json  pyproject.toml  test_openrouter.py  test_phase3_integration.py
.github/workflows/: ci.yml  security.yml
config/: enterprise_deployment.yaml
docker/enterprise/: Dockerfile  docker-compose.enterprise.yml  entrypoint.sh  healthcheck.py
docs/: API_DOCUMENTATION.md  API_EXAMPLES.md  ENTERPRISE_DEPLOYMENT.md  QUICK_START.md  USER_GUIDE.md  phase4_enterprise_plan.md
playbooks/purple_team/: dns_tunneling_hunt.yml  oauth_abuse_drill.yml  pentestgpt_integration.yml  ransomware_tabletop.yml  web_recon_safe.yml
scripts/: enterprise_setup.sh
src/satria/: __init__.py
src/satria/agents/autonomous/: __init__.py  response_orchestrator.py
src/satria/agents/context/: risk_scorer.py
src/satria/agents/copilot/: analyst_copilot.py
src/satria/agents/decision/: triage_planner.py
src/satria/agents/forensics/: __init__.py  digital_forensics_analyzer.py
src/satria/agents/intelligence/: __init__.py  behavioral_anomaly_detector.py  network_anomaly_detector.py  threat_intelligence_engine.py
src/satria/agents/memory/: incident_memory_system.py
src/satria/agents/orchestration/: edr_orchestrator.py  multi_vendor_orchestrator.py
src/satria/agents/perception/: edr_connector.py  log_collector.py  log_collector_agent.py
src/satria/api/: enhanced_endpoints.py  main.py  models.py  security.py
src/satria/core/: agent_base.py  agent_orchestrator.py  config.py  context_graph.py  enhanced_methods.py  event_bus.py  llm_client.py  quantum_decision_engine.py  schema_validator.py
src/satria/enterprise/: __init__.py  compliance.py  governance.py  reporting.py
src/satria/enterprise/purple_team/: __init__.py  collaboration_framework.py  exercise_manager.py  validation_engine.py
src/satria/integrations/: __init__.py  pentestgpt_planner.py  red_team_gateway.py
src/satria/interface/: __init__.py  chat_interface.py  web_interface.py
src/satria/interface/templates/: chat.html
tests/: conftest.py
tests/test_agents/test_intelligence/: __init__.py  test_analyst_copilot.py  test_behavioral_anomaly_detector.py
tests/test_enterprise/: __init__.py  test_compliance.py  test_purple_team.py
